[package]
name    = "curl-inject-opt"
version = "0.2.1"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V.",
]
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
curl-inject-opt-shared = { path = "../shared" }

clap          = { version = "4.0.22", features = ["derive"] }
clap_complete = "4.0.5"
libc          = "0.2.48"
structopt     = "0.3.13"
yansi         = "0.5.0"
