[package]
name    = "curl-inject-opt"
version = "0.2.4"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V.",
]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
curl-inject-opt-shared = { path = "../shared", version = "=0.2.4" }

clap          = { version = "4.0.22", features = ["derive"] }
clap_complete = "4.0.5"
libc          = "0.2.48"
yansi         = "1.0.1"
