[package]
name    = "curl-inject-opt-preload"
version = "0.2.3"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"Fizyr B.V.",
]
edition = "2021"
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
curl-inject-opt-shared = { path = "../shared", version = "0.2.2" }
libc = "0.2.48"
